--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server ./src/data/db.json"
+    "server": "json-server --watch --no-cors ./src/data/db.json"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -24,7 +24,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc-fb9a90fa48-20240614",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "~0.17.4",
     "vite": "^5.4.0"
   }
 }
